--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
+    "archiver": "^5.3.0",
+    "memfs": "^3.2.2",
+    "serverless-offline": "^7.0.0",
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
+    "@types/archiver": "^5.1.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
     "json-schema-to-ts": "^1.5.0",
