--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "archiver": "^5.3.0",
     "memfs": "^3.2.2",
     "serverless-offline": "^7.0.0",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
     "@types/archiver": "^5.1.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
+    "@types/uuid": "^8.3.0",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
     "serverless-webpack": "^5.3.5",
